src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Production_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TAM Or Production Owner for the opportunity</inlineHelpText>
        <label>Production Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Production_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Owner_from_Account__c</fullName>
        <formula>Account.Technical_Account_Manager__c</formula>
        <inlineHelpText>Production Owner(/TAM) responsible for the related account</inlineHelpText>
        <label>Production Owner from Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Evaluation_Link__c</fullName>
        <inlineHelpText>CSM and T&amp;L&apos;s combined evaluation and score.</inlineHelpText>
        <label>Proposal Evaluation Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Decision__c</fullName>
        <label>RFP Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Proposal_Submission__c</fullName>
        <inlineHelpText>Link to submitted RFP proposal.</inlineHelpText>
        <label>RFP Proposal Submission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_contact_DM_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First line decision maker has provided approval for contacting the 2nd line decision maker or has committed to contact the 2nd line decision maker.</inlineHelpText>
        <label>Ready to contact DM-2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <label>Reason for Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasoning_for_potential_target_partner__c</fullName>
        <inlineHelpText>Please fill in the reason supporting your decision to target this partner for this content topic</inlineHelpText>
        <label>Reasoning for potential target partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Oppty_Hidden__c</fullName>
        <label>Record Type Oppty (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referencabiliy__c</fullName>
        <description>Referenceability Type</description>
        <label>Referenceability</label>
        <picklist>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referenceability_Other__c</fullName>
        <description>Other text field for Referenceability</description>
        <label>Referenceability (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejected_by_UAB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected by UAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_internally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: topic or target being rejected internally at Coursera</description>
        <inlineHelpText>Checked if reasons for loss included: topic or target being rejected internally at Coursera</inlineHelpText>
        <label>Rejected internally at Coursera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date on which the renewal is due; automatically defaults to 1 day after the Contract End Date (B2B)</description>
        <formula>Contract_End_Date__c +1</formula>
        <inlineHelpText>Date on which the renewal is due; automatically defaults to 1 day after the Contract End Date</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reprehensibility__c</fullName>
        <description>Reprehensibility for B2B opportunities</description>
        <label>Reprehensibility</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_identified_by_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if Instructor knows which production resources he will be using</inlineHelpText>
        <label>Resources identified by Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S12N_Course_ID__c</fullName>
        <label>S12N/Course ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>For B2B: indirectly or directly sourced</description>
        <inlineHelpText>For B2B: indirectly or directly sourced</inlineHelpText>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salsesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salsesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_RFP_doc_to_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if Instructor and POC have received RFP documentation and detailed next steps</inlineHelpText>
        <label>Sent RFP doc to Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_collaterals_scheduled_intro_call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>sent collaterals about the initiative to entry point of contact and asked time for introduction call</inlineHelpText>
        <label>Sent collaterals &amp; scheduled intro call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sept_Challenge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this content launching as part of the September Challenge?</inlineHelpText>
        <label>Sept. Challenge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signoff_from_CSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Signoff from: CSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signoff_from_Nikhil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Signoff from: Approver (Nikhil)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signoff_from_T_L__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Signoff from: T&amp;L</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_Review_Deadline__c</fullName>
        <inlineHelpText>After this date, an email will be sent to ParMa asking them to close this opportunity.</inlineHelpText>
        <label>Sourcing Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_deprecated__c</fullName>
        <description>Current status within pipeline, correlated with probability</description>
        <inlineHelpText>Current status within pipeline, correlated with probability</inlineHelpText>
        <label>zStatus (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>5%: Target Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%: Topic pitched/Qualified Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%: PoC/Instructor interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%: Verbal commit to submit proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%: Pre-Proposal Submitted (Round 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%: Pre-Proposal approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99%: Full Proposal Submitted (Round 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%: Proposal accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%: Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0%: Rejected / dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who from partner institution submitted the cert proposal</inlineHelpText>
        <label>Submitter&apos;s Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAM_uploaded_signed_confirmation_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if TAM(Production Owner) has uploaded signed Contract Confirmation Letter to salesforce-opportunity</inlineHelpText>
        <label>TAM uploaded signed confirmation letter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_L_Associate__c</fullName>
        <inlineHelpText>The T&amp;L member giving feedback on this course/s12n</inlineHelpText>
        <label>T&amp;L Associate</label>
        <picklist>
            <picklistValues>
                <fullName>Alexandra Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lauren Swersky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Hannemann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mariia Berezina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talia Greenblatt-Kolodny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linlin Xia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kara Behnke</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_L_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>T&amp;L&apos;s final quality approval</inlineHelpText>
        <label>T&amp;L Quality Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_L_RFP_Approval_Reason__c</fullName>
        <inlineHelpText>T&amp;L person to enter point-wise reasons supporting the decision to approve the RFP</inlineHelpText>
        <label>T&amp;L RFP Approval Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_L_Score__c</fullName>
        <label>T&amp;L Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_L_Specialist_FIrst_Name__c</fullName>
        <formula>T_L_Specialist_for_Pedagogy_Approval__r.FirstName</formula>
        <label>T&amp;L Specialist First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_L_Specialist_for_Pedagogy_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>T&amp;L Specialist for Pedagogy Approval on RFP</inlineHelpText>
        <label>T&amp;L Specialist for Pedagogy Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1ForPedagogyApprove</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Targeted_Launch_Date__c</fullName>
        <description>Targeted launch date of the course</description>
        <inlineHelpText>Targeted launch date of the course; may be adjusted as needed</inlineHelpText>
        <label>Course Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targeted_sourcing_batch_number__c</fullName>
        <inlineHelpText>The batch number in case of target sourcing process</inlineHelpText>
        <label>Targeted sourcing: Batch number</label>
        <picklist>
            <picklistValues>
                <fullName>Batch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>Returns &quot;This Quarter&quot; or &quot;This Year&quot; depending on relationship between Close Date and Current Date</description>
        <formula>if( Close_Date_in_Current_Quarter__c =TRUE,&quot;This Quarter&quot;, 
if( Close_Date_in_Previous_Quarter_CY__c =TRUE, &quot;Previous Quarters&quot;,
if(year( CloseDate )=year( TODAY() ),&quot;Remainder of This Year&quot;,&quot;Other&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns &quot;This Quarter&quot; or &quot;This Year&quot; depending on relationship between Close Date and Current Date</inlineHelpText>
        <label>Timeframe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_1__c</fullName>
        <formula>Campaign__r.Topic_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_2__c</fullName>
        <formula>Campaign__r.Topic_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_3__c</fullName>
        <formula>Campaign__r.Topic_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Proposal_Score__c</fullName>
        <label>Total Proposal Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAB_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if opportunity for new Industry Partner is approved by UAB or not</description>
        <inlineHelpText>Is this new IP prospect approved by UAB?</inlineHelpText>
        <label>UAB Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>SDP/CDP URL (as updated by Emma + Frances)</inlineHelpText>
        <label>URL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_Executed_MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uploaded Executed MSA checkbox for B2B opportunities</description>
        <label>Uploaded Executed MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VM_RFP_Approval_Reason__c</fullName>
        <inlineHelpText>VMs to enter point-wise reasons supporting the decision of RFP approval.</inlineHelpText>
        <label>VM RFP Approval Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VM_clarified_content_scope_to_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if call with point of contact happened involving VM to make topics and high-level course requirements clear.</inlineHelpText>
        <label>VM clarified content scope? (OPTIONAL)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <globalPicklist>Vertical</globalPicklist>
        <label>Vertical</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical_v2__c</fullName>
        <label>Vertical (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weak_no_interest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For B2B: Checked if lost due to low/no interest</description>
        <inlineHelpText>For B2B: Checked if lost due to low/no interest</inlineHelpText>
        <label>Weak/no interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_Estimate__c</fullName>
        <description>Probability * 1 for Partnership Oppty Weighted Estimate Report</description>
        <formula>Probability  * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Probability * 1 for Partnership Oppty Weighted Estimate Report</inlineHelpText>
        <label>Weighted Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Forecast__c</fullName>
        <description>Weighted value of total expected Amount multiplied by probability (associated with stage)</description>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weighted value of total Amount x Probability (associated with stage)</inlineHelpText>
        <label>zWeighted Forecast (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_the_technical_scoping__c</fullName>
        <description>What is the technical scoping? for B2B opportunities</description>
        <label>What is the technical scoping?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wishlist_Origin__c</fullName>
        <formula>TEXT(Campaign.Wishlist_Origin__c)</formula>
        <label>Wishlist Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wishlist_Type__c</fullName>
        <formula>TEXT(Campaign.Wishlist_Type__c)</formula>
        <inlineHelpText>Wishlist type related to campaign</inlineHelpText>
        <label>Wishlist Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Workflow Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>related_campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the campaign that aligns with this Opportunity, if applicable</inlineHelpText>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Related Campaign)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Targets</label>
    </listViews>
    <listViews>
        <fullName>All_New_Industry_Partner_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>UAB_Approved__c</columns>
        <columns>Internally_Approved_by_CBO__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Industry_Partner_Opportunity</value>
        </filters>
        <label>All New Industry Partner Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>Manager_Industry_Partner</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ParMa_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Production_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Role__c</field>
            <operation>equals</operation>
            <value>Global ParMa,Manager - US ParMa,US ParMa,Manager - Global ParMa</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>All ParMa Opportunities</label>
        <sharedTo>
            <role>Manager_Global_ParMa</role>
            <role>Manager_US_ParMa</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_3_31_Close_Date</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>3/2/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Date &lt;= 3/31 Close Date</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_Commitment</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Commitment</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Stage4: Commitment</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_FullPro_Accepted</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Full Proposal Accepted</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Stage5d: FullPro Accepted</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_FullPro_Submitted_R2</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Full Proposal Submitted (Round 2)</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Stage5c: FullPro Submit R2</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_Interest_Development</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Interest/Development</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Stage3: Interest/Develop</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_Launched</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Launched</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: Stage6: Launched</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Targets_Stage_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Content_Domain__c</columns>
        <columns>Main_Course_Type__c</columns>
        <columns>Course_Type_Subcategory__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Lost/dropped</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Partnerships_Opportunity</value>
        </filters>
        <label>Partnerships: StageZ: Lost/dropped</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>